samples/_failures_safe/1761352656_d14870_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dcb39ca4.c: In function ‘print_stats’:
./samples/SAFE/__tmp_dcb39ca4.c:124:43: error: expected ‘)’ at end of input
  124 |     printf("Errors: %u\n", analyzer->stats
      |           ~                               ^
      |                                           )
./samples/SAFE/__tmp_dcb39ca4.c:124:5: error: expected declaration or statement at end of input
  124 |     printf("Errors: %u\n", analyzer->stats
      |     ^~~~~~
